K8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movie-ticket
  labels:
    app.kubernetes.io/part-of: movie-ticket-booking
